# wipeoutvisualizer

./: .eslintrc.cjs  .gitignore  README.md  index.html  netlify.toml  package-lock.json  package.json  vite.config.ts
reader/: Cargo.toml
reader/src/: cursor.rs  image.rs  lib.rs  lz.rs  object.rs  structs.rs  track.rs
reader/test/: compare.mjs  reference.mjs
src/: App.tsx  constants.ts  fakeLoading.ts  global.d.ts  main.tsx
src/App/: App.css  App.tsx  resolveLevelPaths.ts  resolveShipIndex.ts  useLevelLoader.ts
src/App/AtlasImage/: AtlasImage.module.css  AtlasImage.tsx
src/App/Loading/: Loading.module.css  Loading.tsx
src/App/World/: World.tsx
src/audio/: AudioProvider.module.css  AudioProvider.tsx  AudioTicker.tsx  analyze.ts  analyze.worker.ts  clock.ts  constants.ts  engine.ts  features.ts  index.ts  pipeline.ts  state.ts
src/audio/aubio/: createBeatTracker.ts  loadAubio.ts
src/audio/estimators/: createSectionDetector.ts
src/audio/features/: createExtractor.ts  createOnsetDetector.ts
src/audio/preanalysis/: decode.ts  (+3 more)
src/constructor/: color.ts  constants.ts  geometry.ts  index.ts  materials.ts  object.ts  plume.ts  polygons.ts  scene.ts  ships.ts  sprites.ts  textures.ts  track.ts  trackSpline.ts  trackTextures.ts
src/gl/: LevelSwapper.tsx  Scene.tsx  Ships.tsx  Sky.tsx  SkyboxLayer.tsx  Track.tsx  World.tsx
src/reactivity/: useBeatLightsReactivity.ts  useBoostTilesReactivity.ts  usePlumeReactivity.ts  useSkyReactivity.ts  useWeaponTilesReactivity.ts
src/reader-bridge/: constants.ts  fetch.ts  index.ts  startwad.ts  types.ts  wasm.ts
(+74 files in other folders)
